
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


typedef int uint16 ;
typedef int int32 ;
struct TYPE_4__ {int* apos; int pos; } ;
struct TYPE_5__ {int alen; scalar_t__ len; TYPE_1__ pos; int word; } ;
typedef TYPE_2__ ParsedWord ;


 void* LIMITPOS (int ) ;
 int MAXENTRYPOS ;
 int MAXNUMPOS ;
 int compareWORD ;
 scalar_t__ palloc (int) ;
 int pfree (int ) ;
 int qsort (void*,int,int,int ) ;
 scalar_t__ repalloc (int*,int) ;
 scalar_t__ strncmp (int ,int ,scalar_t__) ;

__attribute__((used)) static int
uniqueWORD(ParsedWord *a, int32 l)
{
 ParsedWord *ptr,
      *res;
 int tmppos;

 if (l == 1)
 {
  tmppos = LIMITPOS(a->pos.pos);
  a->alen = 2;
  a->pos.apos = (uint16 *) palloc(sizeof(uint16) * a->alen);
  a->pos.apos[0] = 1;
  a->pos.apos[1] = tmppos;
  return l;
 }

 res = a;
 ptr = a + 1;




 qsort((void *) a, l, sizeof(ParsedWord), compareWORD);




 tmppos = LIMITPOS(a->pos.pos);
 a->alen = 2;
 a->pos.apos = (uint16 *) palloc(sizeof(uint16) * a->alen);
 a->pos.apos[0] = 1;
 a->pos.apos[1] = tmppos;




 while (ptr - a < l)
 {
  if (!(ptr->len == res->len &&
     strncmp(ptr->word, res->word, res->len) == 0))
  {



   res++;
   res->len = ptr->len;
   res->word = ptr->word;
   tmppos = LIMITPOS(ptr->pos.pos);
   res->alen = 2;
   res->pos.apos = (uint16 *) palloc(sizeof(uint16) * res->alen);
   res->pos.apos[0] = 1;
   res->pos.apos[1] = tmppos;
  }
  else
  {





   pfree(ptr->word);
   if (res->pos.apos[0] < MAXNUMPOS - 1 && res->pos.apos[res->pos.apos[0]] != MAXENTRYPOS - 1 &&
    res->pos.apos[res->pos.apos[0]] != LIMITPOS(ptr->pos.pos))
   {
    if (res->pos.apos[0] + 1 >= res->alen)
    {
     res->alen *= 2;
     res->pos.apos = (uint16 *) repalloc(res->pos.apos, sizeof(uint16) * res->alen);
    }
    if (res->pos.apos[0] == 0 || res->pos.apos[res->pos.apos[0]] != LIMITPOS(ptr->pos.pos))
    {
     res->pos.apos[res->pos.apos[0] + 1] = LIMITPOS(ptr->pos.pos);
     res->pos.apos[0]++;
    }
   }
  }
  ptr++;
 }

 return res + 1 - a;
}
